# hexlet-flask-example

./: Dockerfile  Makefile  README.md  pyproject.toml
hexlet-flask-example/: app.py  users.json
hexlet-flask-example/scripts/: custom_fake_courses.py  fake_generate.py  get_first_elem_in_obj.py  read_write_json_file.py  update_data_by_id.py
hexlet-flask-example/templates/courses/: cart.html  layout.html
hexlet-flask-example/templates/users/: edit_user.html  registration.html  search_users.html  session_hall.html  show.html  show_user_id.html
hexlet_flask_example/: app.py  app_old.py  users.json
hexlet_flask_example/scripts/: delete_data_by_id.py  validator.py
hexlet_flask_example/templates/courses/: index.html  layout.html
hexlet_flask_example/templates/users/: new.html
